# Ymir-Android

./: GOOGLE_PLAY_RELEASE.md  PLAY_STORE_LICENSING.md  README.md
.github/workflows/: google-play-release.yml
android/: .gitignore  build.gradle  local.properties.example  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  ymir_android.cpp
android/app/src/main/java/com/saturn_emu/android/: BezelDownloader.java  DpadView.java  IgdbService.java  MainActivity.java  SaturnControllerView.java  SaturnPadMappingManager.java  SetupWizardActivity.java  StoragePathUtils.java  YmirNative.java
android/app/src/main/java/com/ymir/android/: IgdbService.java  MainActivity.java  YmirNative.java
android/app/src/main/java/io/github/strikerx3/ymir/android/: IgdbService.java  MainActivity.java  YmirNative.java
android/app/src/main/res/layout/: activity_setup_wizard.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
